--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@
 body{
     height: 100%;
     font-family: 'Courier New', Courier, monospace;
+    background-image: url(https://www.radiusstaffingsolutions.com/wp-content/uploads/iStock-992723324-512x341.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+/*navigation bar*/
 
 .logoPic{
     width: 80px;
@@ -16,7 +21,6 @@ body{
     position: fixed;
     right: 0;
     top: 8px;
-
 }
 
 nav{
@@ -29,6 +33,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     padding: 0 100px;
+    flex-wrap: nowrap;
 }
 
 nav ul{
@@ -40,6 +45,7 @@ nav ul li{
     display: inline-block;
     line-height: 80px;
     margin: 0.5px;
+    flex-wrap: nowrap;
 }
 
 nav ul li a{
@@ -47,12 +53,15 @@ nav ul li a{
     font-size: 17px;
     padding: 7px 13px;
     border-radius: 20px;
+    flex-wrap: nowrap;
 }
 
 a:hover{
     background:#62B6CB;
     transition: 0.5s;
 }
+
+/*search bar*/
 
 nav form{
     display: flex;
@@ -83,6 +92,8 @@ nav form button{
     border-radius: 10px;
 }
 
+/*end of search bar and navigativation bar*/
+
 .slogan{
     width: 100%;
     margin-top: 50px;
@@ -92,6 +103,28 @@ nav form button{
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+/*index page text*/
+
+.intro{
+    background-color: #BEE9E8;
+    border-radius: 20px;
+    width: 320px;
+    height: 360px;
+    padding: 25px;
+    margin: 40px;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.info{
+    display: flex;
+    justify-content: center;
+}
+
+/*end of index page text*/
+
+/*footer*/
 
 .footer{
     position: fixed;
@@ -103,4 +136,50 @@ nav form button{
     background-color: #1B4965;
     color: #CAE9FF;
     text-align: center;
+    margin-bottom: 6px;
+}
+
+/*end of footer*/
+
+/*universities page*/
+.types{
+    background-color: #BEE9E8;
+    border-radius: 20px;
+    width: 370px;
+    height: 360px;
+    padding: 50px;
+    margin: 40px;
+    margin-top: 50px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.typesOfUni{
+    display: flex;
+    justify-content: center;
+}
+
+.countryList{
+    font-size: 16px;
+    padding-top: 50px;
+} 
+
+.countryList li{
+    padding: 4px;
+}
+
+.kw:hover{
+    background:#62B6CB;
+    transition: 0.5s;
+    border-radius: 20px;
+    margin: 10px;
+    padding: 10px;
+}
+
+.countryList li:hover{
+    background:#62B6CB;
+    transition: 0.5s;
+    border-radius: 20px;
+    margin: 10px;
+    padding: 5px;
 }
