--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ nav form button{
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 80px;
     border-radius: 20px;
     background-color: #1B4965;
     color: #CAE9FF;
@@ -139,9 +139,26 @@ nav form button{
     margin-bottom: 6px;
 }
 
+.fa-instagram {
+    background: #1B4965;
+    color: #CAE9FF;
+  }
+
+  .fa-google {
+    background: #1B4965;
+    color: #CAE9FF;
+  }
+
+  .fa-twitter {
+    background: #1B4965;
+    color: #CAE9FF;
+  }
+  
+
 /*end of footer*/
 
 /*universities page*/
+
 .types{
     background-color: #BEE9E8;
     border-radius: 20px;
@@ -183,3 +200,25 @@ nav form button{
     margin: 10px;
     padding: 5px;
 }
+/*end of universities page*/
+
+/*universities in kuwait page*/
+
+.kuwaitUniversities{
+    width: 260px;
+    height: 180px;
+    border-radius: 20px;
+    text-align: center;
+    display: flex;
+}
+
+figcaption{
+    background-color: #BEE9E8;
+    color: #1B4965;
+    border-radius: 20px;
+    font-size: 18px;
+    margin: 2px;
+    padding: 2px;
+}
+
+
