--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 
 body{
+    max-width: 100%;
     height: 100%;
     font-family: 'Courier New', Courier, monospace;
     background-image: url(https://www.radiusstaffingsolutions.com/wp-content/uploads/iStock-992723324-512x341.jpg);
@@ -243,8 +244,8 @@ color: #1B4965;
 
 .kuwaitflag{
     width: 300px;
-    margin-top: 20px;
     border-radius: 20px;
+    margin-top: 20px;    
 }
 
 /*end of universities page*/
@@ -398,15 +399,12 @@ button {
     float: left;
     margin: 40px;
     margin-top: 50px;
-    opacity: 90%;
+    opacity: 100%;
     border-radius: 20px;
     height: 450px;
     width: 400px;
 }
 
-.pics:hover{
-    opacity: 100%;
-    transition: ease-in-out;
-}
+
 
 /*end of each university pages*/
